set the CN dynamically from the server IP

--- a/drone.yaml
+++ b/drone.yaml
@@ -98,7 +98,7 @@ resources:
             pip install docker-py
             # Generate self signed certificate
             mkdir -p /etc/drone/ssl
-            openssl req -new -newkey rsa:4096 -nodes -x509 -subj "/C=US/ST=Texas/L=San Antonio/O=Drone/CN=www.drone.com" -keyout /etc/drone/ssl/drone.key -out /etc/drone/ssl/drone.crt
+            openssl req -new -newkey rsa:4096 -nodes -x509 -subj "/C=US/ST=Texas/L=San Antonio/O=Drone/CN=%server_ip%" -keyout /etc/drone/ssl/drone.key -out /etc/drone/ssl/drone.crt
             # Download DEB and Install
             wget -ct0 %drone_deb_location%
             dpkg -i drone.deb
@@ -112,6 +112,7 @@ resources:
             ufw enable
           params:
             "%drone_deb_location%": { get_param: drone_deb_location }
+            "%server_ip%": { get_attr: [ drone, accessIPv4 ] }
 
 outputs:
   private_key:
