--- a/tests.yaml
+++ b/tests.yaml
@@ -20,4 +20,4 @@ test-cases:
             connection_attempts: 3
             disable_known_hosts: True
             use_ssh_config: True
-            fabfile: drone_server.py # Path to envassert test
+            fabfile: test/fabric/drone_server.py # Path to envassert test
