--- a/rackspace.yaml
+++ b/rackspace.yaml
@@ -4,6 +4,9 @@ application-name: Drone.io
 application-version: latest
 flavor: Single Linux server
 flavor-weight: 1
+reach-info:
+  tattoo: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/drone-tattoo.png
+  icon-20x20: https://0b5294b243620310a700-e388a7f3aba385a925111b1fc6f680d4.ssl.cf2.rackcdn.com/drone-icon-20x20.png
 hidden_outputs:
   - private_key
 abstract: |
