first attempt at replacing bash with masterless salt

--- a/drone.yaml
+++ b/drone.yaml
@@ -111,40 +111,47 @@ resources:
       user_data:
         str_replace:
           template: |
-            #!/bin/bash -v
-            # Install Dependencies
-            apt-get install -y python-pip bc
-            # Install Docker
-            curl -sSL https://get.docker.io/ubuntu/ | sh
-            # Install docker-py
-            pip install docker-py
-            # Generate self signed certificate
-            SERVER_IP=`ifconfig eth0 | grep "inet addr:" | cut -d: -f2 | awk '{print $1}'`
-            mkdir -p /etc/drone/ssl
-            openssl req -new -newkey rsa:4096 -nodes -x509 -subj "/C=US/ST=Texas/L=San Antonio/O=Drone/CN=${SERVER_IP}" -keyout /etc/drone/ssl/drone.key -out /etc/drone/ssl/drone.crt
-            # Download DEB and Install
-            wget -ct0 %drone_deb_location%
-            dpkg -i drone.deb
-            # Configure and Restart Drone
-            cp /etc/drone/drone.toml /etc/drone/drone.toml.bak
-            cat >/etc/drone/drone.toml <<EOF
-              [server]
-              port=":443"
-
-              [server.ssl]
-              key="/etc/drone/ssl/drone.key"
-              cert="/etc/drone/ssl/drone.crt"
-
-              [database]
-              driver="sqlite3"
-              datasource="/var/lib/drone/drone.sqlite"
-
-              [github]
-              client="%github_client_id%"
-              secret="%github_client_secret%"
-            EOF
-            stop drone
-            start drone
+            #!/bin/bash
+            # Install salt-minion using Salt Bootstrap
+            curl -L https://bootstrap.saltstack.com | sudo sh -s --
+            # Set salt-minion to only use local resources
+            echo "file_client: local" > /etc/salt/minion.d/local.conf
+            # Make Pillar folder
+            mkdir /srv/pillar
+            # Clone down States
+            git clone https://github.com/rackspace-orchestration-templates/salt-states.git /srv/salt
+            # Write out Pillar top.sls
+            echo "base:
+              '*':
+                - localhost" > /srv/pillar/top.sls
+            # Write out State top.sls
+            echo "base:
+              '*':
+                - salt-minion" > /srv/salt/top.sls
+            #######################################
+            ## Edit this section ##################
+            #######################################
+            
+            # Add states to the base (4 spaces)
+            echo "    - docker
+                - drone
+            " >> /srv/salt/top.sls
+            # Example Pillar Data using %value% notation
+            # See example pillar data from states repository.
+            echo "
+            drone:
+              deb_url: %drone_deb_location%
+              github_client: %github_client_id%
+              github_secret: %github_client_secret%
+              packages:
+                - bc
+                - python-pip
+            " > /srv/pillar/localhost.sls
+            #######################################
+            ## END ################################
+            #######################################
+            # Run local highstate
+            salt-call --local state.highstate
             # Open and Enable ufw
             ufw allow 443
             ufw allow 22
