--- a/drone.yaml
+++ b/drone.yaml
@@ -114,6 +114,7 @@ resources:
             #!/bin/bash
             # Install salt-minion using Salt Bootstrap
             curl -L https://bootstrap.saltstack.com | sudo sh -s --
+            salt-minion --versions
             # Set salt-minion to only use local resources
             echo "file_client: local" > /etc/salt/minion.d/local.conf
             # Make Pillar folder
