adding python-dev and build essential to the packages

--- a/drone.yaml
+++ b/drone.yaml
@@ -148,6 +148,8 @@ resources:
               packages:
                 - bc
                 - python-pip
+                - python-dev
+                - build-essential
             " > /srv/pillar/localhost.sls
             #######################################
             ## END ################################
