--- a/drone.yaml
+++ b/drone.yaml
@@ -93,6 +93,15 @@ parameters:
 
 resources:
 
+  wait_condition:
+    type: OS::Heat::SwiftSignal
+    properties:
+      handle: { get_resource: wait_condition_handle }
+      timeout: 1800
+
+  wait_condition_handle:
+    type: OS::Heat::SwiftSignalHandle
+
   ssh_key:
     type: "OS::Nova::KeyPair"
     properties:
@@ -100,7 +109,7 @@ resources:
       save_private_key: true
 
   drone:
-    type: "Rackspace::Cloud::Server"
+          type: "OS::Nova::Server"
     properties:
       key_name: { get_resource: ssh_key }
       flavor: { get_param: flavor }
@@ -166,12 +175,14 @@ resources:
                   ufw allow 443
                   ufw allow 22
                   ufw --force enable
+                  wc_notify --data-binary '{"status": "SUCCESS"}'
             runcmd:
               - /tmp/heat/salt_run.sh
           params:
             "%drone_deb_location%": { get_param: drone_deb_location }
             "%github_client_id%": { get_param: github_client_id }
             "%github_client_secret%": { get_param: github_client_secret }
+            wc_notify: { get_attr: ['wait_condition_handle', 'curl_cli'] }
 
 outputs:
   private_key:
